--- a/InterfazGraficaReto2/Informes.xaml
+++ b/InterfazGraficaReto2/Informes.xaml
@@ -5,21 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InterfazGraficaReto2"
         mc:Ignorable="d"
-        Title="Informes" Height="252" Width="673">
+        Title="Informes" Height="225" Width="513">
     <Grid Margin="0,0,0,-6" Background="LightGray">
-        <Button Content="Exportar" HorizontalAlignment="Left" Margin="418,0,0,0" VerticalAlignment="Center" RenderTransformOrigin="-2.813,0.89" Background="White" Click="ExportarInforme"/>
-        <Label Content="Elegir informe:" HorizontalAlignment="Left" Margin="139,93,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="CBInforme" HorizontalAlignment="Left" Margin="243,95,0,0" VerticalAlignment="Top" Width="120">
+        <!-- Botón para exportar el informe seleccionado-->
+        <Button Content="Exportar" HorizontalAlignment="Left" Margin="371,112,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.813,0.89" Background="White" Click="ExportarInforme"/>
+        <Label Content="Elegir informe:" HorizontalAlignment="Left" Margin="92,0,0,0" VerticalAlignment="Center"/>
+        <!-- ComboBox para elegir el informe a exxportar -->
+        <ComboBox x:Name="CBInforme" HorizontalAlignment="Center" VerticalAlignment="Center" Width="120">
             <ComboBoxItem Content="Historial de partidas"/>
             <ComboBoxItem Content="Ranking de jugadores"/>
             <ComboBoxItem Content="Lista de jugadores"/>
         </ComboBox>
-        <Label Content="Exportar en:" HorizontalAlignment="Left" Margin="139,125,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="CBextension" HorizontalAlignment="Left" Margin="243,125,0,0" VerticalAlignment="Top" Width="120">
+        <Label Content="Exportar en:" HorizontalAlignment="Left" Margin="92,127,0,0" VerticalAlignment="Top"/>
+        <!-- Combo Box para elegir la extensión PDF, Excel o CSV -->
+        <ComboBox x:Name="CBextension" HorizontalAlignment="Center" Margin="0,127,0,0" VerticalAlignment="Top" Width="120">
             <ComboBoxItem Content="PDF" />
-            <ComboBoxItem Content="Excel" />
+            <ComboBoxItem Content="XLSX" />
             <ComboBoxItem Content="CSV" />
         </ComboBox>
-
+        <Label Content="Exportación de Informes" HorizontalAlignment="Center" Margin="0,47,0,0" VerticalAlignment="Top" FontSize="25"/>
     </Grid>
 </Window>
